fix(navigation-block): reduce spacing between subnav arrow and nav point

--- a/packages/block-library/src/navigation-link/editor.scss
+++ b/packages/block-library/src/navigation-link/editor.scss
@@ -20,6 +20,12 @@
 		min-width: 20px;
 	}
 
+	&.has-child {
+		> .wp-block-navigation-link__content {
+			padding-right: 8px;
+		}
+	}
+
 	.block-editor-rich-text__editable.is-selected:not(.keep-placeholder-on-focus):not(:focus)[data-rich-text-placeholder]::after {
 		display: inline-block;
 	}
